#INCLUDES =  -I../src
AM_FFLAGS=-I../src
noinst_PROGRAMS = jamgo
jamgo_LDFLAGS = $(LDFLAGS)
#jamgo_SOURCES = mainpp1.f
jamgo_SOURCES = main3.f
#jamgo_SOURCES = mainFlow.f
#jamgo_SOURCES = mainR.f
#jamgo_SOURCES = mainE802.f
jamgo_LDADD = ../src/.libs/libjam.so

EXTRA_DIST = ana.f ana2.f ana3.f anaNA49.f anaPhi.f anaR.f ana_wa80.f\
 anae802.f jamclust.f jamdummy.f jamtest.f\
 main.f main2.f main3.f main4.f\
 main400gev.f mainAuAu.f mainE802.f mainEt.f mainFlow.f mainNA35.f mainNA44.f\
 mainP.f mainPbPb.f mainPhi.f mainR.f mainUA1.f mainWA98.f main_blz.f\
 main_blzNTP.f main_pi0dec.f mainbuu.f mainj.f mainpA.f mainpip.f\
 mainpipi.f mainpn2.f mainpp1.f mainpp2.f mainpp3.f mainu.f\
 jam.cfg
