lib_LTLIBRARIES = libjam.la

libjam_la_SOURCES = jam.f jamana.f jambuu.f jamcoll.f jamcross.f\
 jamdat.f jamdec.f jamhard.f jamhij.f jampdf.f jamsoft.f\
 pyjet.f pysigh.f pythia.f vnibook.f\
 gfortran.f jamdummy.f\
 jam1.inc jam2.inc jam3.inc

#pdf1inc_HEADERS =

libjam_la_LDFLAGS = -module

EXTRA_DIST =  

